1998-08-13  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* lisp/gnus.el (gnus-version-number): Update to 6.8.11.

	* Sync up with Gnus 5.6.34.
	
1998-08-12  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* lisp/gnus.el (gnus-version-number): Update to 6.8.10.

	* Sync up with Gnus 5.6.33.
	
1998-08-11  Keiichi Suzuki  <kei-suzu@mail.wbs.ne.jp>

	* lisp/message.el: Generate New frame when write new message.
	And delete message buffer.
	
1998-08-11  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* lisp/gnus.el (gnus-version-number): Update to 6.8.9.

	* Sync up with Gnus 5.6.31.
	
1998-08-10  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* lisp/gnus.el (gnus-version-number): Update to 6.8.8.

	* Sync up with Gnus 5.6.30.
	
1998-08-10  Keiichi Suzuki  <kei-suzu@mail.wbs.ne.jp>

	* lisp/message.el (message-yank-original): For citing any message.

1998-08-10  Shuhei KOBAYASHI <shuhei-k@jaist.ac.jp>

	* lisp/gnus.el (gnus-version-number): Update to 6.8.7.

1998-08-06  Katsumi Yamaoka <yamaoka@jpl.org>

	*lisp/smtp.el: Do not insert empty line at the end of message.
	
1998-08-06  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* lisp/gnus.el (gnus-version-number): Update to 6.8.6.

	* Sync up with Gnus 5.6.29.
	
1998-08-05  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* lisp/gnus-start.el (gnus-read-init-file): Fix indent.
	* lisp/gnus-ems.el (gnus-tilde-max-form): Redefine instead of
       	(gnus-summary-line-format-spec) to display Japanese character
	correctly in Gnus summaly.

1998-08-05  Keiichi Suzuki  <kei-suzu@mail.wbs.ne.jp>

	* lisp/gnus-start.el (gnus-read-init-file): Don't restrict
	`coding-system-for-read' by `binary' when loading `.gnus'.

1998-08-04  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* lisp/gnus.el (gnus-version-number): Update to 6.8.5.

	* Sync up with Gnus 5.6.28.

1998-07-27  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* lisp/gnus.el (gnus-version-number): Update to 6.8.4.

	* Sync up with Gnus 5.6.27.
